[tool.poetry]
name = "nade"
version = "0.3.1"
description = "Natural affect detection allows to infer basic emotions from social media messages"
authors = ["Christian Hotz-Behofsits"]
license = "MIT"
readme = "README.md"
homepage = "https://nade-explorer.inkrement.ai/"
repository = "https://github.com/inkrement/nade.git"

[tool.poetry.dependencies]
python = ">= 3.9"
pybind11 = ">= 2.0"
fasttext-numpy2 = ">= 0.10.4"
numpy = ">= 2.0.0"
lightgbm = ">= 3.2"
pyarrow = ">= 15.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/inkrement/nade/issues"
